--- a/classes/class_moves_discussion/index.html
+++ b/classes/class_moves_discussion/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Moves in Detail | 地城世界 HTML SRD</title>
+  <title>職業動作詳解 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -110,73 +110,155 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-<h1>Moves in Detail</h1>
-<h2>Multiclass Moves</h2>
-<h3>兼職新手 (Multiclass Dabbler)</h3>
-<h3>兼職學徒 (Multiclass Initiate)</h3>
-<h3>兼職大師 (Multiclass Master)</h3>
-<p class="NoIndent">For the purposes of these multiclass moves the cleric’s commune and cast a spell count as one move. Likewise for the wizard’s spellbook, prepare Spells, and cast a Spell.</p>
-<p>When you first select a multiclass move that grants you the ability to cast spells you prepare and cast spells as if you had one level in the casting class. Every additional time you  level up you increase the level you prepare and cast spells at by one.</p>
-<p class="Example">When Ajax gains 3rd level he takes Multiclass Dabbler to get Commune and Cast a Spell from the Cleric class. He casts and prepares spells like a first level Cleric: first level spells and rotes only, a total of 2 levels of spells prepared. When he later gains 4th level, he prepares and casts spells as a second level Cleric.</p>
-<h1>Bard Moves</h1>
-<h2>Bardic Lore</h2>
-<p class="NoIndent">Treat the areas of your lore like books. Is the upwards-flowing waterfall you just came across something important that would be covered in a book or college course called “On Spells and Magicks?” If so, your Bardic Lore of that name applies.</p>
-<p>If you care enough to ask a question about it then it’s probably important. Don’t second guess yourself: if you care enough to want to know more about it then it has some importance.</p>
-<h2>Charming and Open</h2>
-<p class="NoIndent">Speaking frankly means you really are being open with them, not just giving the appearance of openness. It’s your true sincerity that puts others at ease and lets you get information out of them; if you’re trying to maintain a lie at the same time you won’t get very far.</p>
-<h2>It Goes To Eleven</h2>
-<p class="NoIndent">Of course, the creature you effect must have some way of harming your target of choice. Spurring a wolf into a frenzy to attack the eagle lord circling above doesn’t do any good, the wolf doesn’t have a way to attack it.</p>
-<h2>An Ear for Magic</h2>
-<p class="NoIndent">Acting on the answers can mean acting against them or taking advantage of them. Either way you take +1 forward.</p>
-<h1>Cleric</h1>
-<h2>Commune</h2>
-<p class="NoIndent">If you like you can prepare the same spell more than once.</p>
-<h1>Cleric Spells</h1>
-<h2>Guidance</h2>
-<p class="NoIndent">It’s up to the creativity of your deity (and the GM) to communicate as much as possible through the motions and gestures of your deity’s symbol. You don’t get visions or a voice from heaven, just some visual cue of what your deity would have you do (even if it’s not in your best interest).</p>
-<h2>Magic Weapon</h2>
-<p class="NoIndent">Casting Magic Weapon on the same weapon again has no effect. No matter how many times you cast it on the same weapon it’s still just magic +1d4 damage.</p>
-<p>That said, even a weak enchantment is nothing to be scoffed at. Having a magic weapon may give you an advantage against some of the stranger beasts of Dungeon World, ghosts and the like. The exact effects depend on the monster and circumstances, so make the most of it.</p>
-<h2>Animate Dead</h2>
-<p class="NoIndent">Treating the zombie as your character means you make moves with its stats based on the fiction, just like always. Unless its brain is functioning on its own, the zombie can’t do much besides follow the last order it was given, so you’d better stay close. Even if its brain works it’s still bound to follow your orders.</p>
-<h1>Fighter Moves</h1>
-<h2>Signature Weapon</h2>
-<p class="NoIndent">The base description you choose is just a description. Choosing a spear doesn’t give you Close range, for example. You could choose a spear as the description, then Hand as the range. Your spear is something special, or your technique with it is different, just describe why your weapon has the tags you’ve chosen.</p>
-<h2>Heirloom</h2>
-<p class="NoIndent">The exact nature of the spirits (and therefore what knowledge they can offer to you) is up to you and the GM to decide. Maybe they’re dead ancestors, echoes of people you’ve slain, or a minor demon. Up to you.</p>
-<h2>Armor Mastery</h2>
-<p class="NoIndent">Armor and shields that are reduced to 0 armor are effectively destroyed. You’ll pretty much be paying for a new one anyway, so you might as well drop them and haul out some gold instead.</p>
-<h1>Paladin Moves</h1>
-<h2>Evidence of Faith</h2>
-<p class="NoIndent">Your +1 forward applies to anything you do based on your knowledge of the spell’s effects: defying it, defending against it, using it to your advantage, etc.</p>
-<h1>Ranger Moves</h1>
-<h2>Command</h2>
-<p class="NoIndent">Your bonuses only apply when your animal is doing something it’s trained in. An animal not trained to attack monsters won’t be any help when you’re attacking an otyugh.</p>
-<h1>Thief Moves</h1>
-<h2>Backstab</h2>
-<p class="NoIndent">Reducing armor until they repair it means that they lose armor until they do something that compensates for your damage. If you’re fighting an armored knight that might mean a fresh suit of armor, but for a thick-hided ogre it’s until they’ve had time to heal up (or protect the wound you left).</p>
-<h2>Poisoner</h2>
-<p class="NoIndent">In order to make more doses of your chosen poison you need to be reasonably able to gather the required materials. If you’re locked up at the top of a tower you’re not going to be able to get the materials you need.</p>
-<h2>Wealth and Taste</h2>
-<p class="NoIndent">In order to use this move it’s really got to be your most valuable possession. It’s the honest value you place on it that draws others, no lies.</p>
-<h2>Disguise</h2>
-<p class="NoIndent">Your disguise covers your appearance and any basics like accents and limps. It doesn’t grant you any special knowledge of the target, so if someone asks you what your favorite color is you’d better think fast. Defying danger with CHA is a common part of maintaining a disguise.</p>
-<h1>Wizard Moves</h1>
-<h2>Prepare Spells</h2>
-<p class="NoIndent">You can prepare the same spell more than once if you like.</p>
-<h2>Empowered Magic</h2>
-<p class="NoIndent">Maximizing the effects of a spell is simple for spells that involve a roll: a maximized Magic Missile does 8 damage. In other cases it’s down to the circumstances. A maximized Identify might result in far more information than expected. If there’s no clear way to maximize it you can’t choose that option.</p>
-<p>Likewise for doubling the targets. If the spell doesn’t have targets you can’t choose to double them.</p>
-<h1>Wizard Spells</h1>
-<h2>Dispel Magic</h2>
-<p class="NoIndent">The exact effects depend on the circumstances. A goblin orkaster’s spell might just be ended, while a deity’s consecration is probably just dimmed. The GM will tell you the likely effects of Dispelling a given effect before you cast.</p>
-<h2>Fireball</h2>
-<p class="NoIndent">“Nearby”depends on context; a few paces or so in an open space, considerably more in an enclosed room. Be careful!.</p>
-<h2>Polymorph</h2>
-<p class="NoIndent">In some cases the GM may choose the last option more than once to list each unexpected benefit or weakness.</p>
-<h2>Summon Monster</h2>
-<p class="NoIndent">The exact type of monster you get is up to the GM, based on your choices. If you want a non-reckless swimming creature you might get a water elemental, a 1d8 damage +2 Str creature might be a barbed devil. Whatever the creature is you still get to play it.</p>
+<h1>職業動作詳解</h1>
 
+<hr/>
+<h1>兼職動作</h1>
+<div class="Inner">
+	<h2>兼職新手 (Multiclass Dabbler)</h2>
+	<h2>兼職學徒 (Multiclass Initiate)</h2>
+	<h2>兼職大師 (Multiclass Master)</h2>
+	<p class="NoIndent">
+	對於這些兼職動作而言，將牧師的<b>通神</b>和<b>施放法術</b>動作視為一個動作。同樣的，法師的<b>法術書</b>、<b>準備法術</b>、和<b>施放法術</b>動作也是如此。</p>
+	<p>
+	當你第一次選擇能讓你獲得施放法術能力的兼職動作時，你把你自己視作等級 1 的該施法職業來準備和施放法術。每當你在這之後升級時，你用來準備和施放法術的師法者等級也會跟著提升 1 級。</p>
+	<p class="Example">
+	當埃阿斯升到 3 級時，他選擇獲得了 兼職新手 動作，並藉此得到牧師職業中的 通神 和 施放法術 動作。他將如同等級一的牧師一樣準備和施放法術：他只能使用禱念以及等級 1 的法術，且只能夠準備等級總和為 2 級的法術。當他之後升到 4 級時，他將能夠如同等級二的牧師一樣準備和施放法術。</p>
+</div>
+
+<hr/>
+<h1>吟遊詩人動作</h1>
+<div class="Inner">
+	<h2>詩人逸聞 (Bardic Lore)</h2>
+	<p class="NoIndent">
+	將你逸聞的專業領域當成書本。你方才遭遇到的向上逆流瀑布是否是個重要的場所？又是否會被記載一本標題為「法術和魔法」的書本或大學課程中呢？若答案是肯定的，那麼你就可以應用「法術和魔法」的詩人逸聞領域。</p>
+	<p>
+	如果你對這些事物的關心足以讓你提出關於它們的問題，那麼它或許就真的很重要。不要懷疑自己：如果你你確實在意到想多知道一些關於它們的情報，那它就確實有一定的重要性。</p>
+
+	<h2>敞開心胸 (Charming and Open)</h2>
+	<p class="NoIndent">
+	真誠坦率地交談，意味著你必須真的對他們敞開心胸，而不只是僅有表面的虛情假意。你那從內心發出的真正誠意才是讓他人放鬆下來的主要原因，這也讓你得以從他們身上得到更多情報；若你試著在這同時維持一個謊言的話，你可沒辦法持續太久。</p>
+
+	<h2>超越極限 (It Goes To Eleven)</h2>
+	<p class="NoIndent">
+	當然，你所影響的生物必須要擁有能夠傷害到你所選擇目標的手段。讓野狼發狂並攻擊在高空中盤旋的鷹王並不會帶來任何好處，畢竟野狼並不具備任何攻擊鷹王的手段。</p>
+
+	<h2>魔法知音 (An Ear For Magic)</h2>
+	<p class="NoIndent">
+	依據答案採取行動，意味著你採取了對抗它們的行動、或者利用它們來創造優勢。無論是哪種形式，你都將獲得下次+1。</p>
+</div>
+
+<hr/>
+<h1>牧師動作</h1>
+<div class="Inner">
+	<h2>通神 (Commune)</h2>
+	<p class="NoIndent">
+	若你希望，你可以重複準備同一個法術超過一次。</p>
+</div>
+
+<hr/>
+<h1>牧師法術</h1>
+<div class="Inner">
+	<h2>神導術 (Guidance)</h2>
+	<p class="NoIndent">
+	這個法術透過你神祇象徵的動作和手勢所能傳達的情報多寡，將取決於你信奉神祇（以及GM）的創意。你並不會直接得到來自天堂的異象或聲音啟示，而只會得到一些視覺暗示，指示著神祇希望你採取的行動（即使那並不是你最感興趣的事情）。</p>
+
+	<h2>魔化武器 (Magic Weapon)</h2>
+	<p class="NoIndent">
+	重複對著同一把武器施放魔化武器並不會帶來任何影響。無論你對同一把武器重複施放這個法術多少次，該武器都只會帶來 +1d4 的魔法傷害。</p>
+	<p>
+	儘管如此，這個弱小的附魔強化也不是毫無價值的。擁有一把魔法武器能讓你在對付地城世界中的一些古怪生物時獲得一些優勢，比如說對付幽靈之類的虛體生物等等。它的確切效果取決於怪物和當下的環境，所以盡可能充分的利用它吧！</p>
+
+	<h2>活化死屍 (Animate Dead)</h2>
+	<p class="NoIndent">
+	將這隻殭屍視做你的角色，意味著你依據敘事使用它的數值進行動作，一如既往。除非它的大腦功能可以正常運作，否則這個殭屍除了遵照你最後交代它的一個命令之外做不了其他事，因此你最好時時跟緊它。就算它的大腦能正常運作，它仍然會忠實執行你的命令。</p>
+</div>
+
+<hr/>
+<h1>戰士動作</h1>
+<div class="Inner">
+	<h2>招牌武器 (Signature Weapon)</h2>
+	<p class="NoIndent">
+	你為武器所選擇的基礎描述就僅僅只是描述。舉例來說，選擇長矛並不會因此讓你的武器帶有<tag class="red">近身</tag>標籤。你可以選擇長矛做為武器的描述，並接著選擇<tag class="red">觸及</tag>做為你武器的作用範圍，這意味著你的長矛可能另有特別之處、或是你使用它的技巧異於常人。說明為什麼你的招牌武器會帶有你所選擇的標籤。</p>
+
+	<h2>傳家之寶 (Heirloom)</h2>
+	<p class="NoIndent">
+	這個精魂的實際性質（以及它們因此所能提供的知識）將取決於你和GM來決定。或許它們是過世的先祖靈魂、你所殺死的人們的殘響、或是一頭低階惡魔。由你們決定。</p>
+
+	<h2>護甲精通 (Armor Mastery)</h2>
+	<p class="NoIndent">
+	護甲值被歸零的盔甲和盾牌將會實質性的被摧毀。不管怎麼說，反正你總得掏錢去買個新的，不如就把它們扔了，去賺些金幣吧。</p>
+</div>
+
+<hr/>
+<h1>聖武士動作</h1>
+<div class="Inner">
+	<h2>信仰之證 (Evidence of Faith)</h2>
+	<p class="NoIndent">
+	你的下次+1可以應用在任何你基於對該法術效果的瞭解所採取的行動：面對該法術造成的危險、保衛受法術影響的同伴、或是利用它做為你的優勢，等等。</p>
+</div>
+
+<hr/>
+<h1>遊俠動作</h1>
+<div class="Inner">
+	<h2>命令 (Command)</h2>
+	<p class="NoIndent">
+	你的這些加值只能在你的動物夥伴協助你進行某件牠受過訓練的行動時才能被應用。一名未受過「與怪物戰鬥」訓練的動物夥伴可沒有辦法在你攻擊一頭食腐獸的時候提供任何幫助。</p>
+</div>
+
+<hr/>
+<h1>盜賊動作</h1>
+<div class="Inner">
+	<h2>背刺 (Backstab)</h2>
+	<p class="NoIndent">
+	減少護甲值直到他們將之修復，意味著他們將失去護甲值直到他們做了某些事情來彌補你所造成的傷害。若你的對手是一名全副武裝的騎士，則這可能代表他需要換上一套全新的盔甲；但對於一名粗皮硬肉的食人魔來說，這個狀態可能就只會持續到牠們花時間休養癒合（或者保護你留下的傷口）。</p>
+
+	<h2>施毒者 (Poisoner)</h2>
+	<p class="NoIndent">
+	若想要製備出更多份量的所選毒藥，則你必須要能合理地收集到你所需要的材料。如果你被關在高塔頂端，你大概就不太可能得到你所需要的材料。</p>
+
+	<h2>財富與品味 (Wealth and Taste)</h2>
+	<p class="NoIndent">
+	若想要使用這個動作，你必須真的拿出你最有價值的所有物。你對這個物品寶貴價值的誠實態度正是吸引了他人注意的原因，不能有謊言。</p>
+
+	<h2>易容偽裝 (Disguise)</h2>
+	<p class="NoIndent">
+	你的偽裝將涵蓋你的整個外觀，以及任何基礎的表徵，像是口音和跛足。然而這個偽裝並不會賦予你任何關於偽裝目標的知識，因此若有人問起你最喜歡的顏色，那麼你最好快點想想辦法。使用魅力來<b>面對危險</b>是你在維持偽裝身分時經常會遭遇的一環。</p>
+</div>
+
+<hr/>
+<h1>法師動作</h1>
+<div class="Inner">
+	<h2>準備法術 (Prepare Spells)</h2>
+	<p class="NoIndent">
+	若你希望，你可以重複準備同一個法術超過一次。</p>
+
+	<h2>強效魔法 (Empowered Magic)</h2>
+	<p class="NoIndent">
+	對於那些涉及擲骰決定效果的法術而言，法術效果最大化的意義相當單純：一個效果被最大化的魔法飛彈法術能夠直接造成 8 點傷害。而對其他法術而言，這個選項就相當取決於其具體情況。一個效果被最大化的辨識用法術（像是偵測魔法）可能會為你帶來遠超乎期待的大量情報。如果該法術並沒有明確的效果最大化手段，則你不能選擇這個選項。</p>
+	<p>
+	同樣的道理也適用於使影響目標變為兩倍的選項。若該法術沒有指定影響的目標，則你不能選擇使它影響的目標變為兩倍。</p>
+</div>
+
+<hr/>
+<h1>法師法術</h1>
+<div class="Inner">
+	<h2>解除魔法 (Dispel Magic)</h2>
+	<p class="NoIndent">
+	解除魔法的實際成效取決於當下的情境。哥布林奧法師手中的法術可能會直接被中斷，而神祇授予的強大祝聖則可能只會因此黯淡減弱。在你施放這個法術之前，GM會告訴你對特定效果施放解除魔法後可能導致的結果。</p>
+
+	<h2>火球術 (Fireball)</h2>
+	<p class="NoIndent">
+	「附近」這個詞的範圍將取決於當下情況；在空曠的場所這可能只意味著幾步的距離，但在封閉空間內則可能代表著更大的範圍。務必小心謹慎！</p>
+	
+	<h2>變形術 (Polymorph)</h2>
+	<p class="NoIndent">
+	在某些情況下，GM可能會為每個預料之外的優點或缺點多次選擇列表中的最後一個選項。</p>
+
+	<h2>怪物召喚術 (Summon Monster)</h2>
+	<p class="NoIndent">
+	你實際召喚出來的怪物的類型將由GM根據你的選擇來決定。若你想要一隻性格不魯莽而且會游泳的生物，則你可能會召喚出一隻水元素。而一隻能造成 1d8 傷害且力量調整值為 +2 的生物則可能會是一隻兇殘粗暴的猬魔。無論被召喚出來的是什麼生物，你都得扮演它。</p>
+</div>
 
           </div>
        </div>
