--- a/classes/cleric/spells/index.html
+++ b/classes/cleric/spells/index.html
@@ -162,10 +162,10 @@
 <p class="NoIndent">
 	你喚起饑餓的靈魂附身在一具剛死不久的屍體上並為你服務。這個法術將創造出一隻殭屍，它會使用那極為有限的能力，盡其所能地服從你的命令。將這隻殭屍視為一名角色，但它只能夠使用基本動作。它所有的屬性調整值皆為 +1，且只有 1 點生命值。這隻殭屍同時還會獲得下列 1d4 個你所選擇的特性：</p>
 <ul>
-	<li>它很有天賦。它其中一個屬性的調整值變為 +2。</li>
-	<li>它持久耐用。它將額外獲得等同你等級 x2 的生命值。</li>
-	<li>它有著功能正常的大腦，並可以完成複雜的任務。</li>
-	<li>它看起來並不像是已經死亡，至少在這一兩天內是這樣。</li></ul>
+	<li>它很有天賦。它其中一個屬性的調整值變為 +2</li>
+	<li>它持久耐用。它將額外獲得等同你等級 x2 的生命值</li>
+	<li>它有著功能正常的大腦，並可以完成複雜的任務</li>
+	<li>它看起來並不像是已經死亡，至少在這一兩天內是這樣</li></ul>
 <p class="NoIndent">
 	這隻殭屍將持續存在，直到它因為受到超過它生命值的傷害而被摧毀、或直到你終止這個法術。在這個法術持續期間，你施放法術的動作將獲得持續-1。</p></div>
 
