--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -177,7 +177,7 @@
 	<li class="Option">劍</li>
 	<li class="Option">斧</li>
 	<li class="Option">鎚</li>
-	<li class="Option">矛</li>
+	<li class="Option">長矛</li>
 	<li class="Option">連枷</li>
 	<li class="Option">拳頭</li></ul>
 <p class="NoIndent">選擇最符合你武器的作用範圍：</p>
