--- a/classes/wizard/spells/index.html
+++ b/classes/wizard/spells/index.html
@@ -185,54 +185,83 @@
 
 <div><h1>等級5 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">力場監牢 (Cage)<span class="Tags">	等級 5	, 塑能系, 持續</span></h3>
-<p class="NoIndent">The target is held in a cage of magical force. Nothing can get in or out of the cage. The cage remains until you cast another spell or dismiss it. While the spell is ongoing, the caged creature can hear your thoughts and you cannot leave sight of the cage.</p></div>
-<div class="Spell"><h3 class="SpellName">異界探知 (Contact Other Plane)<span class="Tags">	等級 5	, 預言系</span></h3>
-<p class="NoIndent">You send a request to another plane. Specify who or what you’d like to contact by location, type of creature, name, or title. You open a two-way communication with that creature. Your communication can be cut off at any time by you or the creature you contacted.</p></div>
+<p class="NoIndent">
+	目標被魔法力場所構成的牢籠給囚禁。沒有任何東西可以進入或離開這個牢籠。這個牢籠將持續直到你施放另一個法術、或你解消這個法術。在這個法術持續期間，被囚禁的生物可以聽見你的思想，且你不能讓視線離開這個牢籠。</p></div>
+
+<div class="Spell"><h3 class="SpellName">異界聯繫 (Contact Other Plane)<span class="Tags">	等級 5	, 預言系</span></h3>
+<p class="NoIndent">
+	你向另一個異位面發出一個請求。透過地點、生物類型、名稱、或頭銜來指定你打算聯繫誰或什麼東西。你將開啟一個與該生物之間的雙向溝通渠道。你們的溝通渠道可以在任何時候被你或你所聯繫的生物中斷。</p></div>
+
 <div class="Spell"><h3 class="SpellName">變形術 (Polymorph)<span class="Tags">	等級 5	, 惑控系</span></h3>
-<p class="NoIndent">Your touch reshapes a creature entirely, they stay in the form you craft until you cast a spell. Describe the new shape you craft, including any stat changes, significant adaptations, or major weaknesses. The GM will then tell you one or more of these:</p>
-<ul><li>The form will be unstable and temporary</li>
-<li>The creature’s mind will be altered as well</li>
-<li>The form has an unintended benefit or weakness</li></ul></div>
+<p class="NoIndent">
+	你的觸碰將完全重塑一個生物的身體，他將維持你所塑造的外型，持續直到你再次施放法術。描述你所塑造的新外型，包括任何的屬性值變動、重要的適應能力、或者重大的弱點。GM接著會告訴你以下一項或更多的事實：</p>
+<ul>
+	<li>這個型態並不穩定，且只會短暫維持</li>
+	<li>該生物的心智也將跟著被改變</li>
+	<li>這個型態有一個預料之外的優點或缺點</li></ul></div>
+
 <div class="Spell"><h3 class="SpellName">怪物召喚術 (Summon Monster)<span class="Tags">	等級 5	, 召喚系, 持續</span></h3>
-<p class="NoIndent">A monster appears and aids you as best it can. Treat it as your character, but with access to only the basic moves. It has +1 modifier for all stats, 1 HP, and uses your damage dice. The monster also gets your choice of 1d6 of these traits: </p>
-<ul><li>It has +2 instead of +1 to one stat</li>
-<li>It’s not reckless</li>
-<li>It does 1d8 damage</li>
-<li>Its bond to your plane is strong: +2 HP for each level you have</li>
-<li>It has some useful adaptation</li></ul>
-<p class="NoIndent">The GM will tell you the type of monster you get based on the traits you select. The creature remains on this plane until it dies or you dismiss it. While the spell is ongoing you take -1 to cast a spell.</p></div>
+<p class="NoIndent">
+	一隻怪物憑空出現，並會盡其所能的協助你。將這隻怪物視作你的角色，但它只能夠使用基本動作。它所有的屬性調整值皆為 +1，且只有 1 點生命值，並使用你的傷害骰。這隻怪物同時還會獲得下列 1d6 個你所選擇的特性：</p>
+<ul>
+	<li>它其中一個屬性的調整值變為 +2，而非原本的 +1</li>
+	<li>它並不魯莽粗暴</li>
+	<li>它造成 1d8 傷害</li>
+	<li>它與你所處位面之間的聯繫相當強烈。它額外獲得等同你等級 x2 的生命值</li>
+	<li>它有著某些相當實用的適應能力</li></ul>
+<p class="NoIndent">
+	GM會根據你所選擇的特性告訴你這隻怪物的生物類型。該生物將持續存在於這個位面，直到它死亡、或直到你解消這個法術。在這個法術持續期間，你施放法術的動作將獲得持續-1。</p></div>
 <hr/>
+
 <div><h1>等級7 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">支配術 (Dominate)<span class="Tags">	等級 7	, 惑控系, 持續</span></h3>
-<p class="NoIndent">Your touch pushes your mind into someone else’s. You gain 1d4 hold. Spend one hold to make the target take one of these actions:</p>
-<ul><li>Speak a few words of your choice</li>
-<li>Give you something they hold</li>
-<li>Make a concerted attack on a target of your choice</li>
-<li>Truthfully answer one question</li></ul>
-<p class="NoIndent">If you run out of hold the spell ends. If the target takes damage you lose 1 hold. While the spell is ongoing you cannot cast a spell.</p></div>
+<p class="NoIndent">
+	你的觸碰將把你的意志灌輸到其他人的腦袋之中。你獲得 1d4 掌握。你可以消耗一個掌握來使目標採取下列其中一個行動：</p>
+<ul>
+	<li>說出你所選擇的幾個字詞</li>
+	<li>將它所持握的某個東西交給你</li>
+	<li>對一個你所選擇的目標進行一次聯合攻擊</li>
+	<li>誠實地回答一個問題</li></ul>
+<p class="NoIndent">
+	若你的掌握被消耗殆盡，這個法術也將隨之終止。若該目標受到傷害，則你將失去 1 掌握。在這個法術持續期間，你無法施放法術。</p></div>
+
 <div class="Spell"><h3 class="SpellName">真知術 (True Seeing)<span class="Tags">	等級 7	, 預言系, 持續</span></h3>
-<p class="NoIndent">You see all things as they truly are. This effect persists until you tell a lie or dismiss the spell. While this spell is ongoing you take -1 to cast a spell.</p></div>
+<p class="NoIndent">
+	你能以看見一切事物的真實樣貌。這個法術將持續直到你說謊、或是解消這個法術。在這個法術持續期間，你施放法術的動作將獲得持續-1。</p></div>
+
 <div class="Spell"><h3 class="SpellName">行影術 (Shadow Walk)<span class="Tags">	等級 7	, 幻術系</span></h3>
-<p class="NoIndent">The shadows you target with this spell become a portal for you and your allies. Name a location, describing it with a number of words up to your level. Stepping through the portal deposits you and any allies present when you cast the spell at the location you described. The portal may only be used once by each ally.</p></div>
+<p class="NoIndent">
+	你透過這個法術所指定的陰影將變成一個為你和你同伴所使用的傳送門。指名一個地點，用最多等同於你等級數量的字詞描述它。你以及任何在你施法時在場的同伴將在踏進這個傳送門時被傳送到你所描述的地點。每個同伴都只能使用這個傳送門一次。</p></div>
+
 <div class="Spell"><h3 class="SpellName">觸發術 (Contingency)<span class="Tags">	等級 7, 塑能系</span></h3>
-<p class="NoIndent">Choose a 5th level or lower spell you know. Describe a trigger condition using a number of words equal to your level. The chosen spell is held until you choose to unleash it or the trigger condition is met, whichever happens first. You don’t have to roll for the held spell, it just takes effect. You may only have a single contingent spell held at a time; if you cast Contingency while you have a held spell, the new held spell replaces the old one.</p></div>
+<p class="NoIndent">
+	選擇一個等級 5 或更低的已知法術。使用等同於你等級數量的字詞描述一個觸發條件。你所選擇的法術將被扣住，直到你選擇釋放它、或觸發條件被滿足，看哪個情況發生。你並不需要為你扣住的法術擲骰，它將直接發揮效果。你同時只能擁有一個被扣住的觸發法術；若你在保有一個扣住法術的同時再次施放觸發術，則新的法術將取代舊的。</p></div>
+
 <div class="Spell"><h3 class="SpellName">死雲術 (Cloudkill)<span class="Tags">	等級 7, 召喚系, 持續</span></h3>
-<p class="NoIndent">A cloud of fog drifts into this realm from beyond the Black Gates of Death, filling the immediate area. Whenever a creature in the area takes damage it takes an additional, separate 1d6 damage which ignores armor. This spell persists so long as you can see the affected area, or until you dismiss it.</p></div>
+<p class="NoIndent">
+	一團雲霧從死亡國度的黑門飄盪到這個世界，籠罩著目前的區域。每當一個生物在這個區域內承受傷害，它將額外受到 1d6 點無視護甲的傷害。只要你仍能看見受影響的區域，這個法術就會持續存在，直到你將它解消。</p></div>
 <hr/>
+
 <div><h1>等級9 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">嫌惡術 (Antipathy)<span class="Tags">	等級 9, 惑控系, 持續</span></h3>
-<p class="NoIndent">Choose a target and describe a type of creature or an alignment. Creatures of the specified type or alignment cannot come within sight of the target. If a creature of the specified type does find itself within sight of the target, it immediately flees. This effect continues until you leave the target’s presence or you dismiss the spell. While the spell is ongoing you take -1 to cast a spell.</p></div>
+<p class="NoIndent">
+	選擇一個目標並描述一種生物類型或一個陣營。屬於該指定類型或陣營的生物將無法接近到目標的視線範圍內。若這類生物發現自己處於目標的視線範圍內，他們將會立刻逃跑。這個效果將持續直到你離開目標、或你解消這個法術。在這個法術持續期間，你施放法術的動作將獲得持續-1。</p></div>
+
 <div class="Spell"><h3 class="SpellName">預警術 (Alert)<span class="Tags">	等級 9, 預言系</span></h3>
-<p class="NoIndent">Describe an event. The GM will tell you when that event occurs, no matter where you are or how far away the event is. If you choose, you can view the location of the event as though you were there in person. You can only have one Alert active at a time.</p></div>
+<p class="NoIndent">
+	描述一個事件。無論你在哪裡、或距離該事件發生的地點有多遠，GM都會告訴你這個事件將在何時發生。若你希望，你可以選擇觀看該事件將要發生的地點，就如同你親身歷臨一樣。你同時只能擁有一個正在生效的預警術。</p></div>
 
 <div class="Spell"><h3 class="SpellName">囚魂寶石 (Soul Gem)<span class="Tags">	等級 9</span></h3>
 <p class="NoIndent">
 	你將一個垂死生物的靈魂囚禁在一顆寶石之中。被囚禁的生物會意識到自己被囚禁，但仍能透過法術、談判、和其他效果而被操弄。所有針對被囚禁生物所進行的動作都將獲得 +1 加值。你可以在任何時候將靈魂從中釋放，然而一旦被釋放，它就再也無法被重新禁錮。</p></div>
 
 <div class="Spell"><h3 class="SpellName">庇護所 (Shelter)<span class="Tags">	等級 9, 塑能系, 持續</span></h3>
-<p class="NoIndent">You create a structure out of pure magical power. It can be as large as a castle or as small as a hut, but is impervious to all non-magical damage. The structure endures until you leave it or you end the spell.</p></div>
+<p class="NoIndent">
+	你使用純粹的魔法能量創造出一棟建築物。這棟建築物可以跟城堡一樣大，也可以跟茅舍一樣小，但無論大小如何，它們全都免疫於所有非魔法傷害。這棟建築物將會持續存在直到你離開它、或是你終止這個法術。</p></div>
+
 <div class="Spell"><h3 class="SpellName">完美召喚術 (Perfect Summons)<span class="Tags">	等級 9, 召喚系</span></h3>
-<p class="NoIndent">You teleport a creature to your presence. Name a creature or give a short description of a type of creature. If you named a creature, that creature appears before you. If you described a type of creature, a creature of that type appears before you.</p></div></div>
+<p class="NoIndent">
+	你將一個生物傳送到你面前。指定一個生物、或給出一段關於一種生物類型的簡短描述。若你指定一個生物，則該生物將會出現在你面前。若你描述一種生物類型，則一個該類型的生物將會出現在你面前。</p></div></div>
 
           </div>
        </div>
